painel react adm

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -91,6 +91,26 @@ services:
     restart: unless-stopped
     command: pnpm dev --host 0.0.0.0 --port 3000
 
+  admin:
+    build:
+      context: ../apps/admin
+      dockerfile: Dockerfile.dev
+    container_name: vsa_admin_dev
+    environment:
+      VITE_API_URL: http://backend:8000
+      DOCKER_ENV: "true"
+    volumes:
+      - ../apps/admin:/app
+      - admin_node_modules:/app/node_modules
+    ports:
+      - "3001:3001"
+    depends_on:
+      - backend
+    networks:
+      - vsa_network
+    restart: unless-stopped
+    command: pnpm dev --host 0.0.0.0 --port 3001
+
 volumes:
   postgres_dev_data:
     driver: local
@@ -99,6 +119,8 @@ volumes:
   backend_venv:
     driver: local
   frontend_node_modules:
+    driver: local
+  admin_node_modules:
     driver: local
 
 networks:
