--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "turbo dev",
     "dev:frontend": "turbo dev --filter=@vsa/frontend",
     "dev:backend": "turbo dev --filter=@vsa/backend",
+    "dev:admin": "turbo dev --filter=@vsa/admin",
     "build": "turbo build",
     "lint": "turbo lint",
     "typecheck": "turbo typecheck",
